C# 문법종합반 개인 과제 - Firebase 추가

--- a/personal_assignment/personal_assignment/personal_assignment.csproj
+++ b/personal_assignment/personal_assignment/personal_assignment.csproj
@@ -8,6 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="spartadungeon-firebase-adminsdk-ehm3m-4a1b516086.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="spartadungeon-firebase-adminsdk-ehm3m-4a1b516086.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
